[package]
name = "emv_parser"
version = "0.1.5"
edition = "2021"
description = "An EMV Message Parser"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HosseinAssaran/EMV-Parser"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
emv_tlv_parser = "0.1.8"
hex = "0.4.3"

[http]
http.check-revoke = "false"
